PC-125: make the Notes icon clickable to expand/collapse the notes section & fix styles for pc-label & rbt-input-wrapper classes

--- a/app/assets/stylesheets/application/common.scss
+++ b/app/assets/stylesheets/application/common.scss
@@ -5,3 +5,7 @@
 .pc-mw-524 {
   max-width: 524px !important;
 }
+
+.pc-pointer {
+  cursor: pointer;
+}
