--- a/app/assets/stylesheets/application/items_pricing_page.scss
+++ b/app/assets/stylesheets/application/items_pricing_page.scss
@@ -5,7 +5,7 @@
   .pc-label {
     top: -0.7rem;
     left: 0.8rem;
-    background: linear-gradient(to bottom, $white 55%, transparent 45%);
+    background-color: $white;
   }
 
   .btn-close {
