--- a/app/assets/stylesheets/application/typeahead.scss
+++ b/app/assets/stylesheets/application/typeahead.scss
@@ -128,6 +128,7 @@ $rbt-placeholder-color: $secondary !default;
     justify-content: start;
     align-items: center;
     gap: 4px;
+    padding-right: 20px;
     overflow: hidden;
   }
 }
@@ -313,7 +314,7 @@ $rbt-token-active-color: $rbt-color-white !default;
 
     .rbt-close-content::after {
       position: absolute;
-      content: "X"; // change "×" to "X"
+      content: 'X'; // change "×" to "X"
       top: 50%;
       left: 50%;
       width: inherit;
